4.7.0 (unreleased)
------------------
  * GtkDialog and GtkFileChooserDialog now respond to the commands
  that work for GtkWindow.
  * Toplevel windows report 'name:closed' when closed by the window
  manager.
  * Add missing GtkStatusbar command remove_all_id.
  * GtkStatusbar commands take non-whitespace strings as context id,
  not just integers.
  * Add GtkDrawingArea command set_font_face.
  * Add command line option -b for sending pipeglade to background.
  * Add command line option -l for logging duration of pipeglade
  command execution.
  * Command execution time improved by a factor of about 20.
  * Avoid silly precision on mouse coordinates emitted from GtkEventBox.

4.6.0 (2016-03-27)
------------------
  * Make sure fifos are set to mode 0600 before being used.
  * Add support for creating tooltips.
  * Add support for GtkEventBox which reports keyboard and pointer
    device activity.
  * Add support for widgets grabbing focus.

4.5.0 (2016-03-25)
------------------
  * Add GtkStatusbar commands that take a context id argument.
  * Add support for changing widget size.
  * Add support for GtkScrolledWindow.

4.4.0 (2015-12-12)
------------------
  * Fix a subtle GTK-related bug where freshly created fifos vanished.
  * Fix a bug involving GTK+ 3.14 and GtkTreeView.
  * Add a --display option.

4.3.0 (2015-11-30)
------------------
  * Support GtkTreeStore.
  * Support editing in GtkTreeView.
  * Data behind GtkTextView and GtkTreeView can be saved into files
  where they are stored as a sequence of ordinary pipeglade commands.
  * Arbitrary commands can be read from files.
  * Setting fields of a non-existing GtkTreeStore/GtkListStore row
  automatically creates any nodes necessary in the supporting tree
  structure.

4.2.0 (2015-11-08)
------------------
  * Support GtkWindow moving and resizing.
  * Eliminate any use of sleep(), avoiding spinning.

4.1.0 (2015-10-02)
------------------