@@ -8,6 +8,8 @@
   * GtkStatusbar commands take non-whitespace strings as context id,
   not just integers.
   * Add GtkDrawingArea command set_font_face.
+  * Add GtkDrawingArea command rel_move_for supporting text placement
+  with respect to center, upper left corner, etc., of the text.
   * Add command line option -b for sending pipeglade to background.
   * Add command line option -l for logging duration of pipeglade
   command execution.
